<resources>
    <string name="app_name">SoilSmartApp</string>
    <string name="company_name">SoilSmart</string>

    <!-- Strings related to login -->
    <string name="logo_description">SoilSmart</string>
    <string name="login">Sign In</string>
    <string name="create_account_msg">Don\'t have an account?\nRegister here.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password must be at least 7 characters long and contain at least one of each of the following:\n* a–z\n* A–Z\n* 0–9</string>
    <string name="error_incorrect_password">Invalid credentials</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to register -->
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="prompt_product_key">Product Key (Included in purchase)</string>

    <!-- Strings related to Locations  -->
    <string name="title_activity_node_locations">Locations</string>
    <string name="google_maps_key">AIzaSyD_kQpy75hRLZLDl7Td_gfKIXkhKfjbhSo</string>
    <string name="google_app_id">752907188352</string>

    <!-- Miscellaneous -->
    <string name="password_regex">^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}$</string>
    <string name="email_regex">^\\w+([-+.\']\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*$</string>
    <string name="register_success">Registration Successful!</string>
    <string name="registration_failed">Registration failed.\nDid you use the right product key?\nAlready have an account? Just login and add your product key through our \'Settings\' tab.</string>
    <string name="title_activity_node_detail">NodeDetailActivity</string>
    <string name="butt_label_day">Day</string>
    <string name="butt_label_week">Week</string>
    <string name="butt_label_month">Month</string>
    <string name="snackbarMsg">Blue: Level 1 Moisture\tPurple: Level 2 Moisture\nGreen: Level 3 Moisture</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to AR -->
    <string name="title_activity_ar">AR SoilSmart</string>
    <string name="wikitude_key">0Znl+rCLZF3NDzHkr/Rtn0LmUF6r9Rpn3dfLCnYnGGSYYGVnmuKtQd7MBBtsV3yxN1fgeN7vQZCmK3f/bIymsS31SwWWN2kIVEDdrAgkjYeqyuR0+qnKMpVh6sZZQKGjCOfKj4Y0VkchiMYIJPzon+watuj1qLKoUshGU1aPHclTYWx0ZWRfXxf2BSJ3ljL9+Xqnb8uQ9j5TiFmjjtEA0YCUiN7RZXByhLDAIYpQnTmzfDdHpcCnIxA4f/ZWF19kwUkyxHhQUDbHnv+0dtV7yXuGiIYV4hGXUgQz0ySFSG+vu/DbAslCuCVPkppcV00FVEeiMoitcgkoNWpzLKGvludCXJphJWV5r1RrKThqOt6KUDL+9gF2exhpob1QSRawTZAQP2pdM3a+bgUGEgFsHjD38punQgB5yTpuk7+/nikVDWnBSHwF/LM9epChWYaAZdpe30Csi2qOJXUQMDoliNdpKJyKiKcUMAR9aw1p76VgkP/Q8dYe/D9NWclOnYPUzo7AhTz//b4BDrKoYnVACuQHh54GaYF1PgDMp7dgGwBbwz4ccz/qqfGS8UY/EPdn3037ALiMPVmuote4Xxh0KT1y/pvWSb30FffkXZpKl58tcv7OmSysyV26mSMj8Cwpes1QFsXx+EsspLYNBVTfMVBgXT+evIoBr/llheoHtoY=</string>
    <string name="location_fetching">Trying to find out where you are</string>
    <string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>
    <string name="title_activity_sample_detail">SampleDetailActivity</string>
    <string name="poi_name">Name</string>
    <string name="poi_description">Description</string>
    <string name="poi_id">ID</string>

    <string name="leakage_notification_title_template">Leakage: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="leakage_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="force_off">Force Off</string>
    <string name="last_ncompleted">      Last\nCompleted</string>
    <string name="status">Status</string>
    <string name="cycle_time_n_minutes">Cycle Time\n (minutes)</string>
    <string name="zone">Zone</string>
    <string name="irrigate">IRRIGATE</string>
    <string name="_1">1</string>

</resources>
