<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:rowCount="27"
    android:columnCount="4"
    android:id="@+id/grid"
    android:longClickable="false"
    android:outlineProvider="paddedBounds"
    android:useDefaultMargins="true"
    android:layout_margin="1dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView9"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView13"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/zone"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cycle_time_n_minutes"
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/status"
        android:id="@+id/textView3"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/last_ncompleted"
        android:id="@+id/textView4"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/_1"
        android:id="@+id/textView5"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/_1"
        android:id="@+id/textView6"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView10"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView14"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/_1"
        android:id="@+id/textView7"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView11"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView15"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/_1"
        android:id="@+id/textView8"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView12"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView16"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="2"
        android:id="@+id/textView17"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="center"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="2"
        android:id="@+id/textView19"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="2"
        android:id="@+id/textView18"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView20"
        android:layout_row="8"
        android:layout_column="0"
        android:text="2"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="3"
        android:id="@+id/textView21"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_gravity="center"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="3"
        android:id="@+id/textView22"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="3"
        android:id="@+id/textView23"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="3"
        android:id="@+id/textView24"
        android:layout_row="12"
        android:layout_column="0"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/irrigate"
        android:id="@+id/irrigateButton"
        android:layout_row="26"
        android:layout_column="0"
        android:layout_gravity="center" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/force_off"
        android:id="@+id/offButton"
        android:layout_row="26"
        android:layout_column="3" />

</GridLayout>